# linux_python_utils

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  pyproject.toml
.github/workflows/: python-package.yml
docs/: PLAN_ACTION_REVUE.md  TODO-20260516-2330-SectionAwareEditor.md  TODO-20260517-0101-module-deploy-cli.md  TODO-20260517-0111-extension-scripts-cli.md  TODO-20260517-1200-tests-cli-base.md  TODO-20260521-1020-XdgAppConfig-SystemCommandValidator.md  TODO-20260530-2110-fix-uv-detection-sudo.md  TODO-20260605-1410-cli.md  TODO-20260605-1410-commands.md  TODO-20260605-1410-credentials.md  TODO-20260605-1410-dotconf.md  TODO-20260605-1410-integrity.md  TODO-20260605-1410-logging.md  TODO-20260605-1410-network.md  TODO-20260605-1410-scripts.md  TODO-20260605-1410-systemd.md  TODO-20260623-1500-Refactoring-Template-Method-Logging.md
examples/: nfs-mounts.toml
linux_python_utils/: __init__.py
linux_python_utils/commands/: __init__.py  base.py  builder.py  formatter.py  runner.py
linux_python_utils/config/: __init__.py  base.py  loader.py  manager.py
linux_python_utils/credentials/: __init__.py  base.py  chain.py  exceptions.py  manager.py  models.py
linux_python_utils/credentials/providers/: keyring.py
linux_python_utils/dotconf/: __init__.py  base.py  manager.py  section.py
linux_python_utils/errors/: __init__.py  base.py  console_handler.py  context.py  exceptions.py  logger_handler.py
linux_python_utils/filesystem/: backup.py  base.py
linux_python_utils/integrity/: __init__.py  base.py  sha256.py
linux_python_utils/logging/: __init__.py  file_logger.py
linux_python_utils/network/: config.py  dhcp.py  dns.py  models.py  reporter.py  repository.py  router.py  scanner.py  validators.py
linux_python_utils/notification/: config.py
linux_python_utils/scripts/: __init__.py  installer.py
linux_python_utils/systemd/: __init__.py  base.py  executor.py  linux.py  mount.py  scheduled_task.py  service.py  timer.py  user_service.py  user_timer.py  validators.py
linux_python_utils/systemd/config_loaders/: __init__.py  base.py  mount_loader.py  script_loader.py  service_loader.py  timer_loader.py
linux_python_utils/validation/: __init__.py  base.py  path_checker.py  path_checker_permission.py  path_checker_world_writable.py
src/linux_python_utils/: __init__.py
src/linux_python_utils/cli/: __init__.py  base.py  dry_run.py
src/linux_python_utils/commands/: __init__.py  base.py  builder.py  formatter.py  runner.py
src/linux_python_utils/config/: __init__.py  loader.py  manager.py  (+1 more)
tests/: __init__.py  test_cli.py  test_cli_dry_run.py  test_commands.py  test_config.py  test_config_validation.py  test_config_xdg.py  test_credentials.py  test_dotconf.py  test_dotconf_applier.py  test_dotconf_conf_toml_exporter.py  test_dotconf_line_editor.py  test_dotconf_toml_spec_loader.py  test_errors.py  test_filesystem.py  test_identity_group.py  test_identity_user.py  test_integrity.py  test_logging.py  test_network_config.py  test_network_dhcp.py  test_network_dns.py  test_network_models.py  test_network_reporter.py  test_network_repository.py  test_network_router.py  test_network_scanner.py  test_network_validators.py  test_notification.py  test_scripts.py  test_systemd_config_loaders.py  test_systemd_executor.py  test_systemd_mount.py  test_systemd_scheduled_task.py  test_systemd_service.py  test_systemd_timer.py  test_systemd_unit_porter.py  test_systemd_validators.py  test_validation.py  test_validation_group_access.py  (+2 more)
(+83 files in other folders)
