[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-python-utils"
version = "0.1.0"
description = "Bibliothèque utilitaire Python pour systèmes Linux"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Fred"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["linux", "utils", "systemd", "logging", "configuration"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pycodestyle>=2.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["linux_python_utils*"]

[tool.pycodestyle]
max-line-length = 79
