[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "linux-python-utils"
version = "1.0.0"
description = "Bibliothèque utilitaire Python pour systèmes Linux"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Fred"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = [
    "linux", "utils", "systemd", "logging", "configuration",
    "commands", "dotconf", "validation", "integrity", "security",
]

[project.optional-dependencies]
validation = [
    "pydantic>=2.0",
]
credentials = [
    "python-dotenv>=1.0",
    "keyring>=24.0",
]
dev = [
    "pytest>=7.0",
    "pycodestyle>=2.10",
    "pydantic>=2.0",
    "python-dotenv>=1.0",
    "keyring>=24.0",
    "bandit",
    "safety",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["linux_python_utils*"]

[tool.pycodestyle]
max-line-length = 79
